# ciphico

./: .editorconfig  .gitignore  .pd  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  README.en.md  README.md  SECURITY.md  cmake_install.cmake  install.bat  install.sh  run.bat
.github/workflows/: codeql-analysis.yml
docs/: language.md  syntax.md
src/: ast.cpp  base.cpp  index.cpp  is_something.cpp  lexer.cpp  translate.cpp
src/backend/: func_map.cpp  index.cpp  object.cpp  opt.cpp
src/backend/compiler/: index.cpp
src/backend/lib/: io.cpp  keywords.cpp  operators.cpp  stdlib.cpp  types.cpp
src/backend/vm/: tools.cpp
src/tools/: intrusive_ptr.cpp
